# HangMan

./: .gitignore  CMakeLists.txt  README.md
gui_build/: CMakeCache.txt  HangMan  Makefile  cmake_install.cmake  hm_GUI
include/: HangMan.h  Man.h
resources/: .sanity_check.cpp.swp
src/: .guessButton.qml.swp  CMakeLists.txt  HangMan.cpp  HangManGUI.cpp  Man.cpp  guessButton.qml  main.cpp
test/: SecretWordTest.cpp
