OPTION(TEST "Build all tests." OFF)
OPTION(CLI "Build CLI version of game." OFF)
OPTION(GUI "Build GUI version of game using gtk" ON)
SET(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include/)
IF (TEST)
  ENABLE_TESTING()
  FIND_PACKAGE(GTest REQUIRED)
  FILE(GLOB TESTS "test/*.cpp")
  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS} ${COMMON_INCLUDES})
  ADD_EXECUTABLE(runUnitTests ${TESTS} ${SOURCES})
  TARGET_LINK_LIBRARIES(runUnitTests gtest gtest_main)
  ADD_TEST(test1 runUnitTests)
ENDIF()
IF (GUI)
  PKG_CHECK_MODULES(GTKMM gtkmm-3.0)
  LINK_DIRECTORIES(${GTKMM_LIBRARY_DIRS})
  INCLUDE_DIRECTORIES(${GTKMM_INCLUDE_DIRS} ${COMMON_INCLUDES})
  SET(GUI_SRC HangManGUI.cpp HangMan.cpp Man.cpp)
  ADD_EXECUTABLE(hm_GUI ${GUI_SRC})
  TARGET_COMPILE_FEATURES(hm_GUI PRIVATE cxx_range_for)
  TARGET_LINK_LIBRARIES(hm_GUI ${GTKMM_LIBRARIES})
ENDIF()
if (CLI)
  ADD_EXECUTABLE(HangMan main.cpp HangMan.cpp Man.cpp)
ENDIF()
